testsuite/bad/test_decorating_subtype_of_base/DecoratingSubtypeOfBase.flux
type DecoratingSubtypeOfBase {
   void bad();
}
methods {
   void bad() {
      A a = A.new();
      a add decorator DecoratorB.new();
   }
}